Uglly merging of slr-1.3 and sandbox-1.3 branch
