# Account/app/mod_api_auth/view_api.py
@@ -7,26 +7,29 @@ __author__ = "Jani Yli-Kantola"
 __copyright__ = "Digital Health Revolution (c) 2016"
 __credits__ = ["Harri Hirvonsalo", "Aleksi Palomäki"]
 __license__ = "MIT"
-__version__ = "0.0.1"
+__version__ = "1.3.0"
 __maintainer__ = "Jani Yli-Kantola"
 __contact__ = "https://github.com/HIIT/mydata-stack"
 __status__ = "Development"
 __date__ = 26.5.2016
 """
 
-from flask import Blueprint, render_template, make_response, flash, session, request
-from flask_restful import Resource, Api, reqparse
+from flask import Blueprint, make_response, request
+from flask_restful import Resource, Api
 
-from app import api
-from app.helpers import get_custom_logger, make_json_response, ApiError
-from app.mod_api_auth.controllers import get_account_api_key, get_api_key_sdk
+from app.helpers import get_custom_logger, make_json_response, ApiError, get_utc_time
+from app.mod_account.controllers import verify_account_id_match
+from app.mod_api_auth.controllers import get_account_api_key, get_api_key_sdk, get_user_api_key, get_sdk_api_key, \
+    requires_api_auth_sdk, requires_api_auth_user
 from app.mod_api_auth.helpers import ApiKeyNotFoundError
 from app.mod_auth.helpers import get_account_id_by_username_and_password
+from app.mod_database.controllers import create_event_log_entry
 
-logger = get_custom_logger('mod_api_auth_view_api')
+logger = get_custom_logger(__name__)
 
 # Define the blueprint: 'auth', set its url prefix: app.url/auth
 mod_api_auth = Blueprint('api_auth', __name__, template_folder='templates')
+api = Api(mod_api_auth)
 
 
 class ApiKeyUser(Resource):
@@ -50,14 +53,11 @@ class ApiKeyUser(Resource):
             logger.info("User not authenticated")
             return False
 
-
     @staticmethod
     def authenticate():
-        """Sends a 401 response that enables basic auth"""
-        headers = {'WWW-Authenticate': 'Basic realm="Login Required"'}
-        body = 'Could not verify your access level for that URL. \n You have to login with proper credentials'
-        logger.info("Authentication required")
-        return make_response(body, 401, headers)
+        """Sends a 401 response that can be used to enable authentication"""
+        logger.info("Unauthorized - Authentication required")
+        raise ApiError(code=401, title="Unauthorized", detail="Could not verify your access level")
 
     def get(self):
         try:
@@ -89,9 +89,16 @@ class ApiKeyUser(Resource):
             logger.debug("account_id: " + str(self.account_id))
             logger.debug("api_key: " + str(api_key))
 
+        create_event_log_entry(
+            account_id=int(self.account_id),
+            actor="AccountOwner",
+            action="GET",
+            resource=endpoint,
+            timestamp=get_utc_time()
+        )
 
         response_data = {
-            'Api-Key': api_key,
+            'Api-Key-User': api_key,
             'account_id': str(self.account_id)
         }
 
@@ -130,15 +137,83 @@ class ApiKeySDK(Resource):
         if not auth or not self.check_basic_auth(auth.username, auth.password):
             return self.authenticate()
 
-        api_key = get_api_key_sdk()
+        api_key_sdk = get_api_key_sdk()
+        logger.debug("api_key_sdk: " + api_key_sdk)
 
         response_data = {
-            'api_key': api_key
+            'Api-Key-Sdk': api_key_sdk
         }
 
         return make_json_response(data=response_data, status_code=200)
 
 
+class AccountInfo(Resource):
+    @requires_api_auth_user
+    @requires_api_auth_sdk
+    def get(self, account_id):
+        """
+        Verify that API Key belongs to specified user
+
+        :param account_id:
+        :param slr_id:
+        :return:
+        """
+        try:
+            endpoint = str(api.url_for(self, account_id=account_id))
+        except Exception as exp:
+            endpoint = str(__name__)
+        finally:
+            logger.info("Request to: " + str(endpoint))
+
+        logger.info("Fetching User API Key")
+        api_key_user = get_user_api_key(endpoint=endpoint)
+        logger.debug("api_key_user: " + api_key_user)
+
+        logger.info("Fetching SDK API Key")
+        api_key_sdk = get_sdk_api_key(endpoint=endpoint)
+        logger.debug("api_key_sdk: " + api_key_sdk)
+
+        try:
+            account_id = str(account_id)
+        except Exception as exp:
+            raise ApiError(code=400, title="Unsupported account_id", detail=repr(exp), source=endpoint)
+        else:
+            logger.debug("Account ID from path: " + account_id)
+
+        # Check if Account IDs from path and ApiKey are matching
+        if verify_account_id_match(account_id=account_id, api_key=api_key_user, endpoint=endpoint):
+            logger.info("Account IDs are matching")
+
+        # Response data container
+        try:
+            response_data = {
+              "data": {
+                "type": "Account",
+                "id": account_id,
+                "attributes": {}
+              }
+            }
+        except Exception as exp:
+            logger.error('Could not prepare response data: ' + repr(exp))
+            raise ApiError(code=500, title="Could not prepare response data", detail=repr(exp), source=endpoint)
+        else:
+            logger.info('Response data ready')
+            logger.debug('response_data: ' + repr(response_data))
+
+        create_event_log_entry(
+            account_id=int(account_id),
+            actor="Operator",
+            action="GET",
+            resource=endpoint,
+            timestamp=get_utc_time()
+        )
+
+        response_data_dict = dict(response_data)
+        logger.debug('response_data_dict: ' + repr(response_data_dict))
+        return make_json_response(data=response_data_dict, status_code=200)
+
+
 # Register resources
-api.add_resource(ApiKeyUser, '/api/auth/user/', endpoint='api_auth_user')
-api.add_resource(ApiKeySDK, '/api/auth/sdk/', endpoint='api_auth_sdk')
+api.add_resource(ApiKeyUser, '/external/auth/user/', endpoint='api_auth_user')
+api.add_resource(ApiKeySDK, '/internal/auth/sdk/', endpoint='api_auth_sdk')
+api.add_resource(AccountInfo, '/internal/auth/sdk/account/<string:account_id>/info/', endpoint='api_auth_account_info')
